toolchain/internal/core/analysis/testdata/errors/spreads/spread_field_conflict.vdl
// @expect: E203

type Base {
  id string
}

type User {
  ...Base
  id string
}
